; ModuleID = '/home/carl/AnghaBench/git/t/t4256/1/extr_mailinfo.c_unquote_quoted_string.c'
source_filename = "/home/carl/AnghaBench/git/t/t4256/1/extr_mailinfo.c_unquote_quoted_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.strbuf*, i8*)* @unquote_quoted_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @unquote_quoted_string(%struct.strbuf* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.strbuf*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.strbuf* %0, %struct.strbuf** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 0, i32* %7, align 4
  br label %8

8:                                                ; preds = %24, %20, %2
  %9 = load i8*, i8** %5, align 8
  %10 = getelementptr inbounds i8, i8* %9, i32 1
  store i8* %10, i8** %5, align 8
  %11 = load i8, i8* %9, align 1
  %12 = sext i8 %11 to i32
  store i32 %12, i32* %6, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %28

14:                                               ; preds = %8
  %15 = load i32, i32* %7, align 4
  %16 = icmp eq i32 %15, 1
  br i1 %16, label %17, label %18

17:                                               ; preds = %14
  store i32 0, i32* %7, align 4
  br label %24

18:                                               ; preds = %14
  %19 = load i32, i32* %6, align 4
  switch i32 %19, label %23 [
    i32 92, label %20
    i32 34, label %21
  ]

20:                                               ; preds = %18
  store i32 1, i32* %7, align 4
  br label %8

21:                                               ; preds = %18
  %22 = load i8*, i8** %5, align 8
  store i8* %22, i8** %3, align 8
  br label %30

23:                                               ; preds = %18
  br label %24

24:                                               ; preds = %23, %17
  %25 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %26 = load i32, i32* %6, align 4
  %27 = call i32 @strbuf_addch(%struct.strbuf* %25, i32 %26)
  br label %8

28:                                               ; preds = %8
  %29 = load i8*, i8** %5, align 8
  store i8* %29, i8** %3, align 8
  br label %30

30:                                               ; preds = %28, %21
  %31 = load i8*, i8** %3, align 8
  ret i8* %31
}

declare dso_local i32 @strbuf_addch(%struct.strbuf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
